<resources>
    <string name="app_name">HelloWorld</string>
    <string name="calculate">CALCULATE</string>
    <string name="Agree">I Agree</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="Get">Get Started</string>
    <string name="detail">By Continuing you accept the Term of Use and Privacy Policy</string>
    <string name="skip">Skip</string>
    <string name="text1">Welcome to Clipzy</string>
    <string name="text2">Clip anything from over\n 100,0000 hot topics</string>
    <string name="button">Button</string>
    <string name="result">Result = </string>
    <string name="ok">OK</string>
    <string name="test">djsfldsjfdslf</string>
</resources>
