<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        />
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"/>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/text1"
                style="@android:style/TextAppearance.Large"/>

            <TextView
                android:layout_below="@+id/tvWelcome"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/text2" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textColor="@color/Black"/>
        </LinearLayout>

    </FrameLayout>


    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Get"
        android:padding="16dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/selector_btn_red"
        android:textColor="@drawable/selector_text_color"/>

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        style="@style/TextViewStyle.Orange"/>

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:gravity="center"
        style="@style/TextViewStyle"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/White"
         android:textColor="@color/Black"/>
    </LinearLayout>

    </ScrollView>
</RelativeLayout>